A bit of clean architecture [game]
