# internal/games/dto.go
@@ -1,0 +1,13 @@
+package games
+
+type CreateGameDTO struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Image       string `json:"image"`
+}
+
+type UpdateGameDTO struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Image       string `json:"image"`
+}
